gave buttons higher z-index to stop some mobile devices from having a bug

--- a/style.css
+++ b/style.css
@@ -425,6 +425,7 @@
 
 .caughtBall{
   position: relative;
+  z-index: 100;
   right: .5rem;
   height: 1rem;
   width: 1rem;
@@ -432,12 +433,14 @@
 
 #controls{
   position: absolute;
+  z-index: 100;
   top: 40rem;
   display: flex;
 }
 
 #arrowUp{
   position: relative;
+  z-index: 100;
   left: 2rem;
   top: -10rem;
   border: 1px solid black;
@@ -447,6 +450,7 @@
 }
 #arrowDown{
   position: relative;
+  z-index: 100;
   left: -7.0rem;
   top: -4rem;
   border: 1px solid black;
@@ -457,6 +461,7 @@
 
 #arrowLeft{
   position: relative;
+  z-index: 100;
   left: -4rem;
   top: -7rem;
   border: 1px solid black;
@@ -466,6 +471,7 @@
 }
 #arrowRight{
   position: relative;
+  z-index: 100;
   left: -1.5rem;
   top: -7rem;
   border: 1px solid black;
@@ -476,6 +482,7 @@
 
 #enterBtn{
   position: relative;
+  z-index: 100;
   left: 10rem;
   top: -9rem;
   border: 1px solid black;
@@ -486,6 +493,7 @@
 
 #startBtn{
   position: relative;
+  z-index: 100;
   width: 10rem;
   right: 8rem;
   top: 1rem;
